clash-brush-parser/src/snapshots/clash_brush_parser__tokenizer__tests__tokenize_arithmetic_expression_with_parens.snap
---
source: clash-brush-parser/src/tokenizer.rs
assertion_line: 1613
expression: "test_tokenizer(\"$(( (0) ))\")?"
---
TokenizerResult(
  input: "$(( (0) ))",
  result: [
    Word("$(( (0) ))", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 10,
        line: 1,
        column: 11,
      ),
    )),
  ],
)
