clash-brush-parser/src/snapshots/clash_brush_parser__tokenizer__tests__tokenize_braced_parameter_expansion-2.snap
---
source: clash-brush-parser/src/tokenizer.rs
assertion_line: 1645
expression: "test_tokenizer(\"a${x}b\")?"
---
TokenizerResult(
  input: "a${x}b",
  result: [
    Word("a${x}b", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 6,
        line: 1,
        column: 7,
      ),
    )),
  ],
)
