clash-brush-parser/src/snapshots/clash_brush_parser__tokenizer__tests__tokenize_braced_parameter_expansion_with_escaping.snap
---
source: clash-brush-parser/src/tokenizer.rs
assertion_line: 1651
expression: "test_tokenizer(r\"a${x\\}}b\")?"
---
TokenizerResult(
  input: "a${x\\}}b",
  result: [
    Word("a${x\\}}b", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 8,
        line: 1,
        column: 9,
      ),
    )),
  ],
)
