clash-brush-parser/src/snapshots/clash_brush_parser__tokenizer__tests__tokenize_command_substitution_containing_extglob.snap
---
source: clash-brush-parser/src/tokenizer.rs
assertion_line: 1594
expression: "test_tokenizer(\"echo $(echo !(x))\")?"
---
TokenizerResult(
  input: "echo $(echo !(x))",
  result: [
    Word("echo", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 4,
        line: 1,
        column: 5,
      ),
    )),
    Word("$(echo !(x))", SourceSpan(
      start: SourcePosition(
        index: 5,
        line: 1,
        column: 6,
      ),
      end: SourcePosition(
        index: 17,
        line: 1,
        column: 18,
      ),
    )),
  ],
)
