clash-brush-parser/src/snapshots/clash_brush_parser__tokenizer__tests__tokenize_command_substitution_with_subshell.snap
---
source: clash-brush-parser/src/tokenizer.rs
assertion_line: 1588
expression: "test_tokenizer(\"$( (:) )\")?"
---
TokenizerResult(
  input: "$( (:) )",
  result: [
    Word("$( (:) )", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 8,
        line: 1,
        column: 9,
      ),
    )),
  ],
)
