clash-brush-parser/src/snapshots/clash_brush_parser__tokenizer__tests__tokenize_comment_at_eof.snap
---
source: clash-brush-parser/src/tokenizer.rs
assertion_line: 1387
expression: "test_tokenizer(r\"a #comment\")?"
---
TokenizerResult(
  input: "a #comment",
  result: [
    Word("a", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 1,
        line: 1,
        column: 2,
      ),
    )),
  ],
)
